# bigquery-utils

./: .envrc  .envrc.customization.tmpl  .gitignore  README.md
functions/farmhash/: Dockerfile  Makefile  README.md  int64ToUint64String.js
functions/farmhash/js/: convert.js  package.json  test.js
functions/farmhash/rs/: Cargo.toml
functions/farmhash/rs/src/: lib.rs
functions/farmhash/sql/: 0_int64ToUint64String.sql  fingerprint64.sql  fingerprint64_array.sql  int64Uint64String.sql
functions/string/sql/: decode_open_lr.sql  jaro_winkler_similarity.sql
infra/: .envrc  .gitignore  infra.tf
