[package]
name = "farmhash"
version = "0.1.0"
authors = ["Jacob Hayes <jacob.r.hayes@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmhash = "1.1.5"
js-sys = "0.3.36"
wasm-bindgen = "0.2.59"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
